--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   time_planner: ^0.0.4
   circular_reveal_animation: ^2.0.0
+  url_launcher: ^6.1.0
+  data_table_2: ^2.2.1
 
 dev_dependencies:
   flutter_test:
