added info page

--- a/mobile_app/android/app/src/main/AndroidManifest.xml
+++ b/mobile_app/android/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         </intent>
     </queries>
 
+    <!-- android:label="mobile_app" -->
    <application
-        android:label="mobile_app"
+        android:label="Informatica Tor Vergata"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
