--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -75,9 +75,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/coding.png
+    - assets/images/ppp.png
+    - assets/images/dart_logo.png
+    - assets/images/dart_side.jpg
+    - assets/images/bloc.png
+    - assets/images/go_logo.png
+    - assets/images/albero.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
