--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -15,7 +15,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+# version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
@@ -51,6 +52,7 @@ dependencies:
   data_table_2: ^2.2.1
   auto_size_text: ^3.0.0
   bordered_text: ^2.0.0
+  flutter_html: ^2.2.1
 
 dev_dependencies:
   flutter_test:
