[mobile app] v1.2.0: added exam feature

--- a/mobile_app/pubspec.yaml
+++ b/mobile_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mobile_app
-description: A new Flutter project.
+description: Mobile application for computer science @ Tor Vergata.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # version: 1.0.0+1
-version: 1.1.0
+version: 1.2.0
 
 environment:
   sdk: ">=2.16.2 <3.0.0"
